# pesel-rs

./: Cargo.toml  LICENSE_MIT  README.md  flake.nix
src/: bit_fields.rs  human_redable.rs  lib.rs
