[package]
name = "pesel-rs"
version = "0.1.0"
edition = "2021"
authors = [ "Piotr Niepsuj <piotr_niepsuj@outlook.com>" ]
description = "PESEL validation and detail extraction with multiple data layout implementations."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frytak/pesel-rs"
keywords = [ "pesel", "identification", "validation", "poland", "polish" ]
categories = [ "authentication", "data-structures", "internationalization" ]
exclude = [ "flake.lock", "flake.nix" ]

[dependencies]
chrono = { version = "0.4", default-features = false }
thiserror = "1.0"
